[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batch-pddl-generator"
version = "1.0.0"
description = "Specify PDDL generator parameters and their value ranges and let BPG generate PDDL tasks for you."
readme = "README.md"
license = "GPL-3.0"
authors = [
    {name = "Jendrik Seipp", email = "jendrik.seipp@liu.se"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "lab==6.5",
    "parse",
    "smac==0.12.3", 
    "numpy>=1.25,<2.0",  # Compatible with Python 3.12 but not 2.x
    "configspace==0.4.20",  # Version compatibility from original requirements
]

[project.urls]
Homepage = "https://github.com/jendrikseipp/batch-pddl-generator"
Repository = "https://github.com/jendrikseipp/batch-pddl-generator"
Issues = "https://github.com/jendrikseipp/batch-pddl-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []