[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batch-pddl-generator"
version = "1.0.0"
description = "Specify PDDL generator parameters and their value ranges and let BPG generate PDDL tasks for you."
readme = "README.md"
license = "GPL-3.0"
authors = [
    {name = "Jendrik Seipp", email = "jendrik.seipp@liu.se"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "lab>=8.5",
    "parse>=1.20.2",
    "configspace>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/jendrikseipp/batch-pddl-generator"
Repository = "https://github.com/jendrikseipp/batch-pddl-generator"
Issues = "https://github.com/jendrikseipp/batch-pddl-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []